--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -3,11 +3,13 @@
    width: 30%;
 }
 .container{
-    height: 40px;
+    height: 60px;
     width:100vw;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    box-shadow: 0px 15px 10px -15px rgb(219, 203, 203);
+    margin-bottom: 30px;
 }
 .category{
     display: flex;
@@ -17,12 +19,25 @@
     margin-left: 10px;
 }
 .icon-holder{
-    width: 70px;
+    width: 60px;
 }
 .middle{
     width: 40%;
 }
 .search-input{
     width: 100%;
-    height: 20px;
+    height: 30px;
+    
+    padding: 10px;
+   
+}
+.right{
+    width: 30%;
+   display: flex;
+   justify-content: flex-end;
+   
+}
+.svg{
+    margin-right: 10px;
+    width: 30px;
 }
