--- a/src/Product.css
+++ b/src/Product.css
@@ -1,13 +1,25 @@
 .product-container{
-   width: 75%;
+   width: 100%;
    display: flex;
    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+   
+    
 
 }
 .product-list{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+}
+
+.filter-container{
+    height: 800px;
+    width: 700px;
+    border: 2px solid black;
+}
+.gender{
+    margin-top: 10px;
+}
+.dress-category{
+    margin-top: 10px;
 }
