--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -38,3 +38,14 @@
     align-items: center;
     margin-right: 10px;
 }
+.cart-length{
+   height: 20px;
+   width: 20px;
+   background-color: red;
+   color: white;
+   border-radius: 50%;
+   display: grid;
+   place-items: center;
+   font-size: 18px;
+   font-weight: bold;
+}
